--- a/Week-3/AboutMe.html
+++ b/Week-3/AboutMe.html
@@ -12,7 +12,7 @@
                 <nav>
                     <a href="HomePage.html">Home Page</a> | 
                     <a href="AboutMe.html">About Me</a> | 
-                    <a href="ProjectsPage.html">Projects Page</a>
+                    <a href="ProjectsPage.html">Projects Page</a> |
                     <a href="Contact.html">Contact Me</a>
                 </nav>
             </header>
@@ -41,7 +41,7 @@
                  <nav>
                     <a href="HomePage.html">Home Page</a> | 
                     <a href="AboutMe.html">About Me</a> | 
-                    <a href="ProjectsPage.html">Projects Page</a>
+                    <a href="ProjectsPage.html">Projects Page</a> |
                     <a href="Contact.html">Contact Me</a>
                 </nav>
         </footer>
