--- a/Week-3/ProjectsPage.html
+++ b/Week-3/ProjectsPage.html
@@ -20,9 +20,19 @@ characters-->
 <body>
 <!--All our content is enclosed in the wrapper ID style-->
 <div id="wrapper">
+
 <!--The banner ID style is inside the wrapper ID style-->
 <div id="banner">
 <h1>Explore My Projects</h1>
+    <header>
+
+                <nav>
+                    <a href="HomePage.html">Home Page</a> | 
+                    <a href="AboutMe.html">About Me</a> | 
+                    <a href="ProjectsPage.html">Projects Page</a> |
+                    <a href="Contact.html">Contact Me</a>
+                </nav>
+            </header>
 </div>
 
 <div id="boxes">
@@ -53,7 +63,7 @@ characters-->
                  <nav>
                     <a href="HomePage.html">Home Page</a> | 
                     <a href="AboutMe.html">About Me</a> | 
-                    <a href="ProjectsPage.html">Projects Page</a>
+                    <a href="ProjectsPage.html">Projects Page</a> |
                     <a href="Contact.html">Contact Me</a>
                 </nav>
             </footer>
