--- a/Week-3/Contact.html
+++ b/Week-3/Contact.html
@@ -11,7 +11,7 @@
                 <nav>
                     <a href="HomePage.html">Home Page</a> | 
                     <a href="AboutMe.html">About Me</a> | 
-                    <a href="ProjectsPage.html">Projects Page</a>
+                    <a href="ProjectsPage.html">Projects Page</a> |
                     <a href="Contact.html">Contact Me</a>
                 </nav>
             </header>
@@ -53,7 +53,7 @@
                  <nav>
                     <a href="HomePage.html">Home Page</a> | 
                     <a href="AboutMe.html">About Me</a> | 
-                    <a href="ProjectsPage.html">Projects Page</a>
+                    <a href="ProjectsPage.html">Projects Page</a> |
                     <a href="Contact.html">Contact Me</a>
                 </nav>
             </footer>
