--- a/Week-3/HomePage.html
+++ b/Week-3/HomePage.html
@@ -14,7 +14,7 @@
                 <nav>
                     <a href="HomePage.html">Home Page</a> | 
                     <a href="AboutMe.html">About Me</a> | 
-                    <a href="ProjectsPage.html">Projects Page</a>
+                    <a href="ProjectsPage.html">Projects Page</a> |
                     <a href="Contact.html">Contact Me</a>
                 </nav>
             </header>
